--- a/Simple_API_Database/Views/Shared/_Layout.cshtml
+++ b/Simple_API_Database/Views/Shared/_Layout.cshtml
@@ -41,6 +41,9 @@
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Quotes">Quote</a>
                         </li>
                         <li class="nav-item">
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="CompanyInfo">Company Information</a>
+                        </li>
+                        <li class="nav-item">
                             <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="HistoricalDatas">Historical Data</a>
                         </li>
                         <li class="nav-item">
